# desktopmate

./: .gitignore  ADVANCED.md  CHECKLIST.md  COMPILE-GITHUB.md  EXTENSIONS.md  GUIA-GITHUB-SIMPLES.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  clean-and-run.bat  fix-defender.bat  index.html  install-buildtools.bat  install-git.bat  install-rust.bat  install-rust.ps1  package-lock.json  package.json  start-safe.bat  start-simple.bat  start.bat  upload-to-github.bat
.github/workflows/: build.yml
src/: App.tsx
src-tauri/: $null  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  window_tracker.rs
src/components/: Mascot.tsx  SpeechBubble.tsx
src/data/: phrases.ts
src/hooks/: useMascotBrain.ts
